made changes to stucture for better responsiveness

--- a/verified.html
+++ b/verified.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="verified.css">
 </head>
 <body>
-    <div class="container">
+    <div class="contain">
         <div class="row">
             <div class="col-xl-12 col-sm-12 col-md-12 col-lg-12 banner">
                 <div class="image">
