--- a/dashboard.html
+++ b/dashboard.html
@@ -5,41 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="bootstrap_css/bootstrap.min.css">
     <script src="bootstrap_js/bootstrap.min.js"></script>
     <script src="bootstrap_js/jquery.min.js" ></script>
+    <link rel="stylesheet" href="bootstrap_css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"/>
     <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
-<div class="container">
+<div class="contain p-5">
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 row1">
-            <div class="headingtext">
-                <h2><b>Aboo Salman</b></h2>
-                <div class="headerimage">
-                    <img src="images/Ellipse 6.png" alt="">
-                    <div class="circle">
-
+        <div class="row col-xs-12 col-sm-12 col-md-12 mx-0 px-0 row1">
+            <div class="headingtext mx-auto col-12" style="width:100%" >
+                <div class="row  align-items-center">
+                    <h2 class="col-12 col-sm-6 order-2 order-sm-1 text-center text-sm-start py-3"><b>Aboo Salman</b></h2>
+                    <div class="headerimage col-12 col-sm-6 order-1 order-sm-2 text-end">
+                        <div class="mx-auto ms-sm-auto mx-sm-0">
+                            <img src="images/Ellipse 6.png" alt="">
+                            <div class="circle">
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <h3><b>Postings</b></h3>
+                <h3 class="pt-5 pb-3 "><b>Postings</b></h3>
             </div>
-            <div class="image">
-                <img src="images/rect.svg" class="img-responsive" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consectetur fuga molestias.</p>
-            </div>
-            <div class="ratings">
-                <h3>Posting Ratings</h3>
-               <ul type="disc">
-                   <li> <span1></span1><b style="color: rgb(218, 212, 212); padding:5px; font-size: 13.5px;">20%</b>Stale</li>
-                   <li><span2></span2><b  style="color: rgb(218, 212, 212); padding:5px; font-size: 13.5px;">20%</b>Fake</li>
-                   <li><span3></span3><b  style="color: rgb(218, 212, 212); padding:5px; font-size: 13.5px;">45%</b>Verified</li>
-                   <li><span4></span4><b  style="color: rgb(218, 212, 212); padding:5px; font-size: 13.5px;">15%</b>Unsure</li> 
-               </ul>
-            </div>
-            <div class="chart">
+            <div class=" col-12 p-0 mx-auto row row-cols-1 row-cols-sm-2">
+                <div class="col-12 col-sm-6 p-3">
+                    <div class="image" style="width:100%">
+                        <img src="images/rect.svg" class="img-responsive" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consectetur fuga molestias.</p>
+                    </div>
+                </div>
 
+                <div class="col-12 col-sm-6 p-3">
+                    <div class="ratings mx-auto" style="width:100%">
+                        <h3>Posting Ratings</h3>
+                       <ul type="disc">
+                           <li> <span1></span1><b style="color: rgb(218, 212, 212); padding:5px; font-size: 13.5px;">20%</b>Stale</li>
+                           <li><span2></span2><b  style="color: rgb(218, 212, 212); padding:5px; font-size: 13.5px;">20%</b>Fake</li>
+                           <li><span3></span3><b  style="color: rgb(218, 212, 212); padding:5px; font-size: 13.5px;">45%</b>Verified</li>
+                           <li><span4></span4><b  style="color: rgb(218, 212, 212); padding:5px; font-size: 13.5px;">15%</b>Unsure</li> 
+                       </ul>
+                    </div>
+                    <div class="chart mx-auto" style="width:80%">
+        
+                    </div>
+                </div>
             </div>
+            
 
         </div>
     </div>
