--- a/fullstory.html
+++ b/fullstory.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="bootstrap_css/bootstrap.min.css">
     <script src="bootstrap_js/bootstrap.min.js"></script>
     <script src="bootstrap_js/jquery.min.js" ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"/>
     <link rel="stylesheet" href="fullstory.css">
 </head>
 <body>
-    <div class="container">
+    <div class="contain p-5">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 row1">
                 <h3><b>Recent Happenings</b></h3>
