--- a/rejected1.html
+++ b/rejected1.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="bootstrap_css/bootstrap.min.css">
     <script src="bootstrap_js/bootstrap.min.js"></script>
     <script src="bootstrap_js/jquery.min.js" ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"/>
     <link rel="stylesheet" href="verified.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-12 col-sm-12 col-md-12 col-lg-12 banner">
+    <div class="contain m-0 p-0" >
+        <div>
+            <div class="banner">
                 <div class="image">
                     <img src="images/Vector (1).png" class="img-responsive" alt="">
                 </div>
